--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,10 +1,4 @@
 dist
-node_modules
 typechain-types
-## rollup-plugin-visualizer result file
+# rollup-plugin-visualizer result file
 /client/bundleAnalysis.html
-
-#logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
