CAQD-70 Create container for contracts service

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -226,6 +226,7 @@ Build container:
   parallel:
     matrix:
       - SERVICE:
+          - contracts
           - coin-prices-server
           - client
           - subgraph
