--- a/ci/Dockerfile.coin-prices-server
+++ b/ci/Dockerfile.coin-prices-server
@@ -3,9 +3,10 @@ WORKDIR /app
 COPY package.json yarn.lock ./
 
 FROM root AS build
+RUN yarn install --ignore-scripts --frozen-lockfile
 COPY tsconfig.json ./
 COPY src/* src/
-RUN yarn install --ignore-scripts --frozen-lockfile && yarn build
+RUN yarn build
 
 FROM root AS deploy
 EXPOSE 3000
