OCT-316: deploy goerli proposals when running as localhost network

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -6,26 +6,29 @@
     "clean": "npx hardhat clean",
     "compile": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat compile",
     "deploy:goerli": "npx hardhat --network goerli deploy --tags goerli",
-    "deploy:local": "npx hardhat deploy --tags local",
+    "deploy:localhost": "npx hardhat --network localhost deploy --tags local",
     "docs": "npx hardhat docgen",
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
     "format": "npx prettier --write 'contracts/**/*.sol'",
     "generate-reward": "npx hardhat --network localhost target-fund",
+    "increase-time": "npx hardhat --network localhost increase-time",
     "install:rootpackages": "cd .. && yarn install && cd client",
     "lint": "npx solhint 'contracts/**/*.sol'",
     "postinstall": "rm -r ./node_modules/@nomiclabs/hardhat-ethers && cp -R ./node_modules/hardhat-deploy-ethers ./node_modules/@nomiclabs/hardhat-ethers",
     "preinstall": "yarn install:rootpackages",
-    "prepare-local-test-env": "npx hardhat prepare-local-test-env --network localhost",
+    "prepare-local-test-env": "npx hardhat --network localhost prepare-local-test-env",
     "prettier": "yarn prettier:js --loglevel silent && yarn prettier:ts --loglevel silent",
     "prettier:js": "yarn prettier:js:pure './**/*.{js,jsx}'",
     "prettier:js:pure": "prettier --write",
     "prettier:ts": "yarn prettier:ts:pure './**/*.{ts,tsx}'",
     "prettier:ts:pure": "prettier --parser typescript --write",
-    "start-node": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat node",
+    "start-node": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat node --no-deploy",
+    "status": "npx hardhat --network localhost status",
+    "allocate": "npx hardhat --network localhost allocate",
     "test": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat test",
     "type-check": "tsc --noEmit true",
-    "verify:goerli": "npx hardhat --network goerli etherscan-verify --license GPL-3.0"
+    "verify:goerli": "TS_NODE_TRANSPILE_ONLY=1 npx hardhat --network goerli etherscan-verify --license GPL-3.0"
   },
   "repository": {
     "type": "git",
