--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -8,12 +8,12 @@
   "license": "GPL-3.0",
   "scripts": {
     "build:goerli": "graph build --network goerli",
-    "build:local": "graph build --network localhost",
+    "build:localhost": "graph build --network localhost",
     "clean": "docker-compose down -v && docker-compose rm -v && sudo rm -rf data/ipfs data/postgres",
     "codegen": "graph codegen",
     "create-subgraph": "graph create --node http://127.0.0.1:8020 octant",
     "deploy:goerli": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 --network goerli octant",
-    "deploy:local": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 octant",
+    "deploy:localhost": "graph deploy --ipfs http://127.0.0.1:5001 --node http://127.0.0.1:8020 octant",
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
     "install-root-packages": "cd .. && yarn install && cd subgraph",
