--- a/contracts/package.json
+++ b/contracts/package.json
@@ -13,7 +13,7 @@
     "format": "npx prettier --write 'contracts/**/*.sol'",
     "generate-reward": "npx hardhat --network localhost target-fund",
     "increase-time": "npx hardhat --network localhost increase-time",
-    "install:rootpackages": "cd .. && yarn install && cd client",
+    "install:rootpackages": "cd .. && yarn install && cd contracts",
     "lint": "npx solhint 'contracts/**/*.sol'",
     "postinstall": "rm -r ./node_modules/@nomiclabs/hardhat-ethers && cp -R ./node_modules/hardhat-deploy-ethers ./node_modules/@nomiclabs/hardhat-ethers",
     "preinstall": "yarn install:rootpackages",
