--- a/client/package.json
+++ b/client/package.json
@@ -37,15 +37,16 @@
     "ethers": "^5.7.2",
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
+    "octant-typechain-types": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-identicons": "^1.2.5",
+    "react-infinite-scroller": "^1.2.6",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.7.0",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "reselect": "^4.1.7",
-    "octant-typechain-types": "^0.0.1",
     "wagmi": "^0.12.6",
     "zustand": "^4.3.6"
   },
