--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
   "scripts": {
     "build": "vite build",
     "build:staging": "vite build --mode staging",
+    "codegen": "graphql-codegen --config codegen.ts",
     "dev": "yarn install && vite",
     "eslint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "eslint:fix": "yarn prettier && yarn eslint --fix",
     "install:rootpackages": "cd .. && yarn install && cd client",
     "predev": "yarn install:rootpackages && yarn install",
+    "postinstall": "yarn codegen",
     "preinstall": "yarn install:rootpackages",
     "prettier": "yarn prettier:js --loglevel silent && yarn prettier:ts --loglevel silent",
     "prettier:js": "yarn prettier:js:pure './**/*.{js,jsx}'",
@@ -26,42 +28,45 @@
     "type-check": "tsc --noEmit true"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.4",
     "@ethersproject/constants": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@tanstack/react-query": "^4.28.0",
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
-    "axios": "^0.27.2",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "lodash": "^4.17.21",
     "octant-typechain-types": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-identicons": "^1.2.5",
     "react-infinite-scroller": "^1.2.6",
-    "react-query": "^3.39.2",
     "react-router-dom": "^6.7.0",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "reselect": "^4.1.7",
-    "wagmi": "^0.12.6",
+    "wagmi": "^0.12.10",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
-    "@testing-library/react": "^13.4.0",
+    "@graphql-codegen/cli": "3.3.0",
+    "@graphql-codegen/client-preset": "^3.0.0",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.2.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.1",
-    "eslint": "8.32.0",
+    "eslint": "8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
@@ -79,7 +84,7 @@
     "prettier": "^2.8.3",
     "regenerator-runtime": "^0.13.11",
     "rollup-plugin-visualizer": "^5.9.0",
-    "sass": "^1.57.1",
+    "sass": "^1.61.0",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.2",
     "vite": "^4.0.4"
