--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -28,10 +28,8 @@
     "strict": true,
     "target": "es2022"
   },
-  "exclude": [
-    "src/typechain-types/**/*",
-  ],
   "include": [
+    "codegen.ts",
     "src/**/*"
   ]
 }
