hotfix: faulty Identicon component replaced

--- a/client/package.json
+++ b/client/package.json
@@ -41,10 +41,10 @@
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
     "lodash": "^4.17.21",
+    "minidenticons": "^2.0.2",
     "octant-typechain-types": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-identicons": "^1.2.5",
     "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.7.0",
     "react-select": "^5.7.0",
