--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -296,6 +296,9 @@ validate:
   extends:
     - .terraform:destroy
     - .terraform:config
+  after_script:
+    - !reference [ .terraform:config, after_script ]
+    - "curl -H \"Private-Token: ${TF_VAR_gitlab_token}\" -X DELETE \"${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${TF_STATE_NAME}\""
   environment:
     action: stop
 
