--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -277,6 +277,10 @@ validate:
   stage: environments
   extends:
     - .terraform:config
+  needs:
+    - fmt
+    - validate
+    - Build container
   script:
     - cd "${TF_ROOT}"
     - gitlab-terraform plan -replace="google_compute_instance.vm"
@@ -296,6 +300,9 @@ validate:
   extends:
     - .terraform:destroy
     - .terraform:config
+  needs:
+    - fmt
+    - validate
   after_script:
     - !reference [ .terraform:config, after_script ]
     - "curl -H \"Private-Token: ${TF_VAR_gitlab_token}\" -X DELETE \"${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/${TF_STATE_NAME}\""
