OCT-281 Onboarding flow updates

--- a/client/.env.template
+++ b/client/.env.template
@@ -1,6 +1,6 @@
 VITE_ALLOCATIONS_ADDRESS=
 VITE_ALLOCATIONS_STORAGE_ADDRESS=
-VITE_CRYPTO_VALUES_ENDPOINT=https://crypto-server.octant.world
+VITE_CRYPTO_VALUES_ENDPOINT=https://crypto-server.octant.world/
 VITE_DEPOSITS_ADDRESS=
 VITE_EPOCHS_ADDRESS=
 VITE_GLM_ADDRESS=
