--- a/ci/Dockerfile.contracts
+++ b/ci/Dockerfile.contracts
@@ -12,6 +12,7 @@ FROM root AS deploy
 # When dependencies will be used instead of using only devDependencies
 #COPY ./ ./
 # RUN yarn install --prod --ignore-scripts --frozen-lockfile && yarn cache clean
+COPY --from=build /root/.cache/hardhat-nodejs/ /root/.cache/hardhat-nodejs/
 COPY --from=build /app/ /app/
 ENTRYPOINT [ "/app/entrypoint.sh" ]
 CMD [ "goerli" ]
