--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
+    "formik": "^2.2.9",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
     "lodash": "^4.17.21",
@@ -50,6 +51,7 @@
     "react-toastify": "^9.1.1",
     "reselect": "^4.1.7",
     "wagmi": "^0.12.10",
+    "yup": "^1.1.1",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
@@ -62,7 +64,7 @@
     "@types/jest": "^29.2.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.1",
     "eslint": "8.37.0",
