CAQD-101: Make octant.app domain work on gitlab pages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -223,6 +223,7 @@ pages:
     - yarn build
     - cd ..
     - mv client/dist public
+    - echo '/governance/octant/* /:splat 200' > public/_redirects
   artifacts:
     paths:
       - public
