--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,3 +1,7 @@
+# Image used with local docker-compose for development purposes only
+#
+# Maintainer:
+#   Łukasz Kujawski
 version: "3.9"
 
 services:
