--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,12 @@ web3 = "^6.2.0"
 pytest = "^7.3.1"
 pytest-mock = "^3.10.0"
 
+[tool.poetry.group.prod]
+optional = true
+
+[tool.poetry.group.prod.dependencies]
+psycopg2-binary = "^2.9.6"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
