OCT-394: add Epochs and Proposals connection to contracts & OCT-380: basic allocations flow

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,5 +1,5 @@
 OCTANT_BACKEND_SECRET_KEY=
 OCTANT_ENV=development
-DB_USERNAME=user
-DB_PASSWORD=password
-SUBGRAPH_ENDPOINT=https://octant.world/subgraphs/name/octant
+DB_URI=
+SUBGRAPH_ENDPOINT=
+ETH_RPC_PROVIDER_URL=
