OCT-427 Cypress: introduce & add first test scenario

--- a/client/.env.template
+++ b/client/.env.template
@@ -14,3 +14,4 @@ VITE_REWARDS_ADDRESS=
 VITE_SUBGRAPH_ADDRESS=
 VITE_SUBGRAPH_ADDRESS=https://octant.world/subgraphs/name/octant
 VITE_TRACKER_ADDRESS=
+SECRET_WORDS=test test test test test test test test test test test junk
