--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,9 @@
     "preview": "vite preview",
     "start": "yarn build --base=/ && yarn preview --base=/ --host=0.0.0.0",
     "test": "TZ=UTC jest",
-    "type-check": "tsc --noEmit true"
+    "type-check": "tsc --noEmit true",
+    "synpress:open": "synpress open --configFile synpress.config.ts",
+    "synpress:run": "synpress run --configFile synpress.config.ts"
   },
   "dependencies": {
     "@ethersproject/constants": "^5.7.0",
@@ -60,6 +62,7 @@
     "@babel/preset-react": "^7.18.6",
     "@graphql-codegen/cli": "3.3.0",
     "@graphql-codegen/client-preset": "^3.0.0",
+    "@synthetixio/synpress": "^3.5.1",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.2.6",
     "@types/react": "^18.0.27",
@@ -67,10 +70,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.1",
+    "cypress-vite": "^1.4.0",
     "eslint": "8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-chai-friendly": "^0.7.2",
+    "eslint-plugin-cypress": "^2.13.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
