--- a/contracts/.env.template
+++ b/contracts/.env.template
@@ -1,6 +1,6 @@
 PROPOSALS_CID=
-GOERLI_URL=https://eth-goerli.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
-GOERLI_PRIVATE_KEY=
+TESTNET_RPC_URL=https://eth-goerli.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
+TESTNET_PRIVATE_KEY=
 ETHERSCAN_API_KEY=
 EPOCHS_START=
 EPOCH_DURATION=
