--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ flask = "^2.2.3"
 flask-cors = "^3.0.10"
 flask-migrate = "^4.0.4"
 flask-socketio = "^5.3.3"
+flask-restx = "^1.1.0"
 gql = { extras = ["aiohttp"], version = "^3.4.0" }
 requests = "^2.28.2"
 web3 = "^6.2.0"
@@ -20,6 +21,7 @@ web3 = "^6.2.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 pytest-mock = "^3.10.0"
+black = "^23.3.0"
 
 [tool.poetry.group.prod]
 optional = true
