oct-444 extract texts to JSON file (i18n)

--- a/client/package.json
+++ b/client/package.json
@@ -42,11 +42,13 @@
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0",
+    "i18next": "^22.4.15",
     "lodash": "^4.17.21",
     "minidenticons": "^2.0.2",
     "octant-typechain-types": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.2",
     "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.7.0",
     "react-select": "^5.7.0",
