--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,12 +11,7 @@
     "importHelpers": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "es2017"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext", "es2017"],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -28,16 +23,13 @@
     "strict": true,
     "target": "es2022"
   },
-  "include": [
-    "codegen.ts",
-    "src/**/*",
-  ],
+  "include": ["codegen.ts", "src/**/*"],
   "exclude": [
     "/client/cypress",
     /**
       synpress.config.ts needs to be excluded:
       https://stackoverflow.com/questions/58999086/cypress-causing-type-errors-in-jest-assertions/72663546#7266354
     */
-    "/client/synpress.config.ts",
+    "/client/synpress.config.ts"
   ]
 }
