CAQD-131: Move CI from Goerli to Sepolia testnet

--- a/ci/Dockerfile.contracts
+++ b/ci/Dockerfile.contracts
@@ -15,4 +15,4 @@ FROM root AS deploy
 COPY --from=build /root/.cache/hardhat-nodejs/ /root/.cache/hardhat-nodejs/
 COPY --from=build /app/ /app/
 ENTRYPOINT [ "/app/entrypoint.sh" ]
-CMD [ "goerli" ]
+CMD [ "sepolia" ]
