OCT-448: Read ETH proceeds

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,7 +1,10 @@
 OCTANT_BACKEND_SECRET_KEY=some-random-key
 OCTANT_ENV=development
+SUBGRAPH_ENDPOINT=https://octant.world/subgraphs/name/octant
 DB_URI=
-SUBGRAPH_ENDPOINT=
 ETH_RPC_PROVIDER_URL=
+GNT_CONTRACT_ADDRESS=
+GLM_CONTRACT_ADDRESS=
 EPOCHS_CONTRACT_ADDRESS=
 PROPOSALS_CONTRACT_ADDRESS=
+WITHDRAWALS_TARGET_CONTRACT_ADDRESS=
