--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.1",
+    "chai-colors": "^1.0.1",
     "cypress-vite": "^1.4.0",
     "eslint": "8.37.0",
     "eslint-config-airbnb": "^19.0.4",
