OCT-431: Effective deposit & OCT-432: Total effective deposit

--- a/ci/terraform/templates/cloud-init.yaml
+++ b/ci/terraform/templates/cloud-init.yaml
@@ -213,6 +213,10 @@ write_files:
           \"Deposits\": { \
             \"address\": \"$DEPOSITS_ADDRESS\", \
             \"startBlock\": $BLOCK_NUMBER \
+          },
+          \"Epochs\": { \
+            \"address\": \"$EPOCHS_CONTRACT_ADDRESS\", \
+            \"startBlock\": $BLOCK_NUMBER \
           }
         }\
       }" | jq '.' > $HOME/networks.json
