--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ web3 = "^6.2.0"
 pytest = "^7.3.1"
 pytest-mock = "^3.10.0"
 black = "^23.3.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.group.prod]
 optional = true
