OCT-469 Implement main app load indicator

--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.12",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "i18next": "^22.5.0",
@@ -72,8 +73,8 @@
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "@vitejs/plugin-react": "^4.0.0",
-    "css-mediaquery": "^0.1.2",
     "chai-colors": "^1.0.1",
+    "css-mediaquery": "^0.1.2",
     "cypress-vite": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-airbnb": "^19.0.4",
