--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@ethersproject/constants": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
+    "@loadable/component": "^5.15.3",
     "@tanstack/react-query": "^4.29.7",
     "@web3modal/ethereum": "^2.2.2",
     "@web3modal/react": "^2.2.2",
@@ -40,6 +41,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.12",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "i18next": "^22.5.0",
