[HOTFIX] backend dockerfile apple chip

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@
 #
 # Maintainer:
 #   Łukasz Kujawski
-FROM acidrain/python-poetry:3.10-slim-1.4.0
+FROM --platform=linux/amd64 acidrain/python-poetry:3.10-slim-1.4.0
 
 WORKDIR /app
 
