--- a/client/package.json
+++ b/client/package.json
@@ -100,7 +100,8 @@
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.2",
     "vite": "^4.3.8",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html-config": "^1.0.11"
   },
   "resolutions": {
     "@synthetixio/synpress/**/eth-sig-util": "yarn:@metamask/eth-sig-util@^5.1.0"
