--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ flask-restx = "^1.1.0"
 gql = { extras = ["aiohttp"], version = "^3.4.0" }
 requests = "^2.28.2"
 web3 = "^6.2.0"
+multiproof = {git = "https://github.com/stakewise/multiproof.git", rev = "v0.1.2"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
