--- a/contracts-v1/package.json
+++ b/contracts-v1/package.json
@@ -52,6 +52,7 @@
     "@nomiclabs/hardhat-ethers": "2.2.2",
     "@nomiclabs/hardhat-solhint": "^2.0.1",
     "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/merkle-tree": "^1.0.4",
     "@prb/math": "^2.5.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
@@ -85,7 +86,7 @@
     "husky": "^8.0.3",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.24",
-    "solidity-coverage": "^0.7.21",
+    "solidity-coverage": "^0.8.2",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.1",
     "typescript": "^5.0.2",
